[tool.poetry]
name = "hyper"
version = "0.1.0"
description = "Hyperelastic mechanics"
authors = ["Carlos Adir <carlos.adir.leite@gmail.com>"]
readme = "README.md"
packages = [{ include = "hyper", from = "src" }]

[tool.poetry.dependencies]
numpy = "^1.0.0"
matplotlib = "^3.4.0"
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^5.0.0"
pylint = "^3.0.0"
pre-commit = "^3.0.0"
mypy = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
scriv = {extras = ["toml"], version = "^1.3.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.scriv]
version = "literal: src/hyper/__init__.py: __version__"

[tool.black]
line-length = 79
