[metadata]
name = hyper
description = Hyperelastic mechanics
author = Carlos Leite
license = MIT
license_file = LICENSE.md
platforms = unix, linux, osx, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    hyper
install_requires =
    numpy>=1
python_requires = >=3.6
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    tox>=3.24